# ovp-data-api

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  deploy.yml
migrations/: 001_features_pass.sql  003_service_sessions.sql  004_beats_and_scenes.sql  005_display_metadata.sql
src/: config.rs  error.rs  events.rs  ids.rs  lib.rs  main.rs  metrics.rs  state.rs
src/auth/: middleware.rs  mod.rs  reaper.rs  token.rs
src/db/: audit.rs  audit_log.rs  beats.rs  chunks.rs  display_names.rs  flags.rs  metadata.rs  mod.rs  mute_ranges.rs  participants.rs  pool.rs  scenes.rs  segments.rs  service_sessions.rs  sessions.rs  uniform.rs  users.rs
src/routes/: admin.rs  audio.rs  audio_mix.rs  audit.rs  auth.rs  beats.rs  chunks.rs  health.rs  metadata.rs  metrics.rs  mod.rs  mute.rs  participants.rs  scenes.rs  segments.rs  sessions.rs  uniform_crud.rs  users.rs  ws.rs
src/routes/ws/: filter.rs  mod.rs  queue.rs  session.rs
src/storage/: audio.rs  mem.rs  metadata.rs  mod.rs  s3.rs
tests/: features_pass.rs
tests/common/: mod.rs
