[package]
name = "chronicle-data-api"
version = "0.2.0"
edition = "2021"

[dependencies]
axum       = { version = "0.8", features = ["macros", "ws"] }
tokio      = { version = "1",   features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
sqlx       = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = ["catch-panic", "trace"] }
rand        = "0.9"
thiserror   = "2"
sha2        = "0.10"
hex         = "0.4"
futures     = "0.3"
async-trait = "0.1"
bytes       = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
